# RectifyingStripPatterns

./: .gitignore  CMakeLists.txt  LICENSE  MeshProcessing.cpp  MeshProcessing.h  OptimizerCheckboard.cpp  README.md  main.cpp
app/: get_line_plot.py  gui.cpp  gui.h  gui_1.cpp  lsc_main.cpp  main.cpp
cmake/: install_openmesh.py  lscDependencies.cmake  lscDownloadExternal.cmake  lscUtils.cmake
data/: cy_bnd_90_to_60.csv  cy_start75_135_45.csv  cylinder_Dgr35_Ep085.csv  cylinder_Dgr45_Ep00033.csv  cylinder_Dgr45_Ep015.csv  cylinder_Dgr45_Ep3e-4.csv  cylinder_Dgr60_Ep00038.csv  cylinder_Dgr60_Ep1e-13.csv  half_rot_minus_3_45degree.csv  i3_.csv  near3_60.csv  near3_95_45.csv  near3_95_45_bnd.csv  near3_95_45_bnd90.csv  para.txt  s_half_rot_150_30.csv  s_half_rot_40degree  small_half_rot_minus_3_60.csv
data/interactive/: 48p75_1.csv  48p75_1b.csv  readme.txt  s1_0x.csv  s1_0y.csv  s1_0z.csv  s1_1x.csv  s1_1y.csv  s1_1z.csv  s1_2x.csv  s1_2y.csv  s1_2z.csv  s1_bc.csv  s1_flist.csv  smooth1.csv
data/mesh_opt/: cy_from90to80.csv  near3_from90to60.csv
data/objsCoarse/: paras  saved
data/origami/: crv_30.csv  crv_opt_90degree_lock.csv  fig10_60.csv  fig10_60_b.csv  fig10_85.csv  roof_60.csv  roof_75.csv
data/proce/: 1120_A1.csv  1120_A2.csv  1120_G.csv  1120_bnd0_120_asym2.csv  1120_bnd0_120_asym2_uniform.csv  1120_bnd0_60_asym1.csv  1120_bnd0_60_asym1_uniform.csv  1120_bnd0_60_asym1_uniform1.csv  crv_70.csv  crv_model1_cut_otho.csv  negative_smt_asymp0.csv  negative_smt_asymp1
data/pseudo-geodesic/: 72.csv  72b.csv  readme.txt
data/quad_extract/: cy_60.csv  cy_90.csv
data/quads/: 120.csv  60.csv  info_colleft.csv  info_colright.csv  info_cols.csv  info_rowleft.csv  info_rowright.csv  info_rows.csv  readme.txt
data/strip/: crease_b_x.csv  crease_b_y.csv  crease_b_z.csv  crease_x.csv  crease_y.csv  crease_z.csv  opt_b_x.csv  opt_b_y.csv  opt_b_z.csv  opt_x.csv  opt_y.csv  opt_z.csv  readme.txt
data/tracing/: 60.csv  60_b.csv  crease_b_x.csv  crease_b_y.csv  crease_b_z.csv  crease_x.csv  crease_y.csv  crease_z.csv  initial_ls.csv  opt_b_x.csv  opt_b_y.csv  opt_b_z.csv  opt_x.csv  opt_y.csv  opt_z.csv  ply_b_x.csv  ply_b_y.csv  ply_b_z.csv  ply_x.csv  ply_y.csv  ply_z.csv  readme.txt  saved_traced_0.csv  saved_traced_1.csv_0.csv  saved_traced_2_0.csv  saved_traced_3_0.csv  saved_traced_4_0.csv  smooth.csv
rbuild/: lsc_bin  lsc_devbin
rbuild/glfw/src/: glfw3.pc
rbuild/include/lsc/: MeshProcessing.h  OptimizerCheckboard.h  basic.h  igl_tool.h  tools.h
src/: MeshProcessing.cpp  MeshProcessing.h  OptimizerCheckboard.h  SOURCE.cmake  basic.cpp  basic.h  dev.cpp  dev.h  energy.cpp  functional.cpp  igl_tool.cpp  igl_tool.h  interaction.cpp  interaction.h  mesh_opt.cpp  mesh_opt.h  nodes.cpp  polyline.cpp  quad.cpp  tools.cpp  tools.h  topology.cpp  tracing.cpp
